Formatting and change spread calculation

--- a/pyoptionprofit.ipynb
+++ b/pyoptionprofit.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,25 +113,26 @@
     "    \n",
     "    # Get list of days to check\n",
     "    date_range = pd.date_range(date_start,\n",
-    "                  date_end,\n",
-    "                  day_ticks).normalize().tolist()\n",
+    "                               date_end,\n",
+    "                               day_ticks).normalize().tolist()\n",
     "    idx = list(np.arange(price_lower, price_upper + price_step, price_step))\n",
     "    idx.reverse()\n",
     "    \n",
     "    net_cost = sum([entry_cost(option) for option in strategy])\n",
     "    \n",
     "    def compute_single_profit(option, d, theo_price):\n",
-    "        option_value = black_scholes(option['contract_type'], \n",
-    "                       theo_price, \n",
-    "                       option['strike_price'], \n",
-    "                       ((option['expires_on'] - d).days / 365.),\n",
-    "                       rf,\n",
-    "                       option['iv']) * option['n_contracts'] * 100\n",
-    "        spread = option['contract_ask'] - option['contract_bid']\n",
+    "        per_contract_per_share_value = black_scholes(option['contract_type'], \n",
+    "                                                     theo_price, \n",
+    "                                                     option['strike_price'], \n",
+    "                                                     ((option['expires_on'] - d).days / 365.),\n",
+    "                                                     rf,\n",
+    "                                                     option['iv'])\n",
+    "        spread = option['contract_ask'] - option['contract_bid'] # Use the spread at purchase\n",
+    "        total_value = (per_contract_per_share_value - spread) * option['n_contracts'] * 100\n",
     "        if option['contract_party'] == 'buy':\n",
-    "            return option_value - spread\n",
+    "            return total_value\n",
     "        else:\n",
-    "            return (option['contract_ask'] * option['n_contracts']) - (option_value - spread)\n",
+    "            return (option['contract_ask'] * option['n_contracts']) - total_value\n",
     "        \n",
     "    def compute_values(option):\n",
     "        return pd.DataFrame(\n",
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +186,7 @@
        "-75.00000000000003"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
